major overhaul of occupy page, all percentages checked and corrected, formatting tweaks, added TOC, and reordered some questions

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -10,7 +10,7 @@ description: collected raw data and survey analysis for political and demographi
 ---
 
 
-<p id="intro">On November 13th of 2011, I and <a href="#note1">several other members[^1]</a> of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report draft.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
+<p id="intro">On November 13th of 2011, I and <a href="#note1">several other members¹</a> of PSU's Survey Research Lab conducted an intercept survey with 134 participants within the Occupy Portland encampment.  This was less than 24 hours before the forced eviction and we managed to collect survey samples (40-question) from each participant.  Below is accumulated data and report draft.  The raw data can be found linked below on this site and the available summaries below, as well.</p>
 
 <div class="blockquote"><img src="/storage/OccupyPDXdata/occupy_portland_dawn.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/></div>
 
@@ -18,16 +18,24 @@ description: collected raw data and survey analysis for political and demographi
 
 <p>Raw Data available in <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyDataRaw.xls" target="_blank">[XLS]</a> and <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyData.ods" target="_blank">[ODS]</a> formats.</p>
 
+<h2>Occupy Portland Report (DRAFT)</h2>
 
-<h2>Occupy Portland Report Summary (DRAFT)</h2>
-<p><a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf">Download PDF of summary</a></p>
-<p class="blockquote">NOTE: Percentages rounded so may not always equal 100%. Refusals (RF) include not directly answering question in some cases, and other written comments incased in paranthesis.</p>
-<br />
+<ul type="none" style="font-size:20px">
+<li><a href="#main">Survey</a></li>
+<li><a href="#demo">Demographics</a></li>
+</ul>
+
+<a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf"> Download PDF of summary</a>
+<p class="blockquote">NOTE: Percentages rounded so may not always equal 100%. Refusals (RF) include marked Refsual or not directly answering question in most cases. Don't Know (DK) and additional written comments noted in paranthesis.</p>
+
+<h2 id="main">Survey</h2>
+
 1. Do you consider yourself a part of the Occupy Portland Movement?
 <div class="blockquote">
 	Yes - 105 (83%)<br />
 	No - 20 (16%)<br />
 	Maybe - 2 (1%)<br />
+	---<br />
 	TOTAL: 127 
 </div>
 
@@ -37,6 +45,7 @@ description: collected raw data and survey analysis for political and demographi
 	Somewhat involved - 49 (37%)<br />
 	Not much involved - 28 (21%)<br />
 	Not at all - 7  (5%)<br />
+	---<br />
 	TOTAL: 132
 </div>
 
@@ -45,6 +54,7 @@ description: collected raw data and survey analysis for political and demographi
 	Yes (Full time) - 32 (24%)<br />
 	Somewhat (Part time) - 18 (14%)<br />
 	No - 82 (62%)<br />
+	---<br />
 	TOTAL: 132
 </div>
 
@@ -55,26 +65,29 @@ City:______________ State_____
 	Portland Metro - 12 (9%)<br />
 	Oregon - 12 (9%)<br />
 	Washington - 3 (2%)<br />
-	USA - 14 (10%)<br />
+	USA - 14 (11%)<br />
 	Outside USA - 0 (0%)<br />
 	The camp is my primary residence - 11 (8%)<br />
-	RF - 5 (3%)<br />
+	---<br />
+	RF - 5 (4%)<br />
 	TOTAL: 130
 </div>
 
 5. Do you think that the Occupy Movement will continue to grow?
 <div class="blockquote">
-	Yes - 100 (74%)<br />
-	No - 9 (6%)<br />
-	Not sure - 25 (18%)<br />
+	Yes - 100 (75%)<br />
+	No - 9 (7%)<br />
+	Not sure - 25 (19%)<br />
+	---<br />
 	TOTAL: 134
 </div>
 
 6. Did you vote in the last election?
 <div class="blockquote">
-	Yes - 88 (66%)<br />
-	No - 42 (31%)<br />
-	NA - 2 (1%)<br />
+	Yes - 88 (67%)<br />
+	No - 42 (32%)<br />
+	---<br />
+	NA - 2 (2%)<br />
 	TOTAL: 132
 </div>
 
@@ -83,6 +96,7 @@ City:______________ State_____
 	Yes - 91 (69%)<br />
 	No - 35 (27%)<br />
 	Undecided - 5 (3%)<br />
+	---<br />
 	NA - 1  (1%)<br />
 	TOTAL: 132
 </div>
@@ -91,8 +105,9 @@ City:______________ State_____
 <div class="blockquote">
 	Yes - 115 (88%)<br />
 	No - 12 (9%)<br />
-	Maybe - 2 (1%)<br />
-	Somewhat - 2 (1%)<br />
+	Maybe - 2 (2%)<br />
+	Somewhat - 2 (2%)<br />
+	---<br />
 	TOTAL: 131
 </div>
 
@@ -100,7 +115,8 @@ City:______________ State_____
 <div class="blockquote">
 	This is my first time getting involved in a political activity - 25 (19%)<br />
 	I have participated in past political activity before the Occupy Movement - 104 (79%)<br />
-	Neither - 2 (1%)<br />
+	Neither - 2 (2%)<br />
+	---<br />
 	TOTAL: 131
 </div>
 
@@ -109,18 +125,20 @@ City:______________ State_____
 	Yes - 40 (30%)<br />
 	yes, no - 2 (2%)<br />
 	No - 89 (67%)<br />
+	---<br />
 	RF - 1 (1%)<br />
 	TOTAL: 132
 </div>
 
 11. In the next few years, do you think that your personal economic situation will get better, get worse, or will it stay about the same?
 <div class="blockquote">
-	Undecided - 2 (1%)<br />
+	Undecided - 2 (2%)<br />
 	Get better - 36 (27%)<br />
 	Get better, stay the same - 1 (1%)<br />
 	Stay the same - 30 (23%)<br />
 	Stay the same, get worse - 1 (1%)<br />
 	Get worse - 61 (47%)<br />
+	---<br />
 	TOTAL: 131
 </div>
 
@@ -128,6 +146,7 @@ City:______________ State_____
 <div class="blockquote">
 	Yes - 89 (68%)<br />
 	No - 42 (32%)<br />
+	---<br />
 	TOTAL: 131
 </div>
 
@@ -137,6 +156,7 @@ City:______________ State_____
 	Maybe - 32 (24%)<br />
 	No - 16 (12%)<br />
 	NA - 1 (1%)<br />
+	---<br />
 	TOTAL: 132
 </div>
 
@@ -146,6 +166,7 @@ City:______________ State_____
 	Maybe - 18 (14%)<br />
 	No - 101 (76%)<br />
 	(in self defense) - 1 (1%)<br />
+	---<br />
 	TOTAL: 133
 </div>
 
@@ -154,16 +175,18 @@ City:______________ State_____
 	Yes - 14 (11%)<br />
 	Maybe - 21 (16%)<br />
 	No - 98 (74%)<br />
+	---<br />
 	TOTAL: 133
 </div>
 
 14C. Would you use the current political system to achieve your goals?
 <div class="blockquote"> 
 	Yes - 46 (35%)<br />
-	Yes, maybe - 2 (1%)<br />
+	Yes, maybe - 2 (2%)<br />
 	Yes, no - 3 (2%)<br />
 	Maybe - 43 (33%)<br />
 	No - 38 (29%)<br />
+	---<br />
 	TOTAL:132
 </div>
 
@@ -171,8 +194,9 @@ City:______________ State_____
 <div class="blockquote">
 	Yes - 25 (19%)<br />
 	Somewhat - 54 (42%)<br />
-	Not sure - 2 (1%)<br />
+	Not sure - 2 (2%)<br />
 	No - 48 (37%)<br />
+	---<br />
 	TOTAL: 129
 </div>
 
@@ -182,6 +206,7 @@ City:______________ State_____
 	Not sure - 15 (11%)<br />
 	Richest Americans are paying a fair share - 7 (5%)<br />
 	(No) - 1 (1%)<br />
+	---<br />
 	RF - 4 (3%)<br />
 	TOTAL: 131
 </div>
@@ -190,7 +215,8 @@ City:______________ State_____
 <div class="blockquote">
 	Yes - 14 (11%)<br />
 	Maybe - 33 (25%)<br />
-	No - 83 (63%)<br />
+	No - 83 (67%)<br />
+	---<br />
 	RF - 2 (2%)<br />
 	TOTAL: 132
 </div>
@@ -202,8 +228,9 @@ City:______________ State_____
 	(Neutral) - 1 (1%)<br />
 	Somewhat disagree - 9 (7%)<br />
 	Strongly disagree - 3 (2%)<br />
+	---<br />
+	DK - 2 (2%)<br />
 	RF - 2 (2%)<br />
-	(Not sure) - 2 (2%)<br />
 	TOTAL: 127
 </div>
 
@@ -211,7 +238,8 @@ City:______________ State_____
 <div class="blockquote">
 	Government money to banks was necessary - 15 (12%)<br />
 	Government money to banks was NOT necessary - 107 (84%)<br />
-	(Don't know) - 1 (1%)<br />
+	---<br />
+	DK - 1 (1%)<br />
 	RF - 3 (2%)<br />
 	TOTAL: 127
 </div>
@@ -221,6 +249,7 @@ City:______________ State_____
 	More Bank regulation is needed - 98 (81%)<br />
 	About the same bank regulation is needed - 7 (6%)<br />
 	Less bank regulation is needed - 10 (8%)<br />
+	---<br />
 	DK - 2 (1%)<br />
 	RF - 3 (2%) <br />
 	TOTAL: 120
@@ -231,7 +260,8 @@ City:______________ State_____
 	Strongly agree - 82 (68%)<br />
 	Somewhat agree - 22 (18%)<br />
 	Somewhat disagree - 6 (5%)<br />
-	Strongly disagree - 10 (10%)<br />
+	Strongly disagree - 10 (9%)<br />
+	---<br />
 	RF - 1 (1%)<br />
 	Total: 121
 </div>
@@ -242,40 +272,27 @@ City:______________ State_____
 	Neutral - 34 (28%)<br />
 	Unsupportive - 31 (26%)<br />
 	(Supportive, unsupportive, neutral) - 1 (1%)<br />
-	RF - 2 (1%)<br />
+	---<br />
+	RF - 2 (2)<br />
 	TOTAL: 121
 </div>
 
 23. What percentage of people at the Occupy Portland camp would you say are a part of the movement versus being here for other reasons?<br />
 % who are a part of the Occupy movement:<br />
 <div class="blockquote">
-	1%	1<br />
-	5%	1<br />
-	10%	3<br />
-	15%	1<br />
-	20%	3<br />
-	20% (80% tweakers) - 1<br />
-	25%	4<br />
-	30%	4<br />
-	32%	1<br />
-	33%	1<br />
-	35%	2<br />
-	38%	1<br />
-	40%	6<br />
-	50%	14<br />
-	60%	8<br />
-	65%	2<br />
-	70%	5<br />
-	73%	1<br />
-	75%	11<br />
-	80%	8<br />
-	85%	1<br />
-	89%	2<br />
-	90%	5<br />
-	95%	2<br />
-	99%	5<br />
-	100% 5<br />
-	70-99% - 1<br />
+	1-9%	2<br />
+	10-19%	4<br />
+	20-29%	8<br />
+	30-39%	9<br />
+	40-49%	6<br />
+	50-59%	14<br />
+	60-69%	10<br />
+	70-79%	17<br />
+	80-89%	11<br />
+	90-99%	12<br />
+	100%	5<br />
+	(70-99%) - 1<br />
+	---<br />
 	DK - 2<br />
 	RF - 6<br />
 	TOTAL: 107
@@ -287,6 +304,7 @@ More - 61 (54%)<br />
 About the same - 45 (39%)<br />
 Less - 5 (4%)<br />
 Other - 3 (3%)<br />
+	---<br />
 TOTAL: 114
 </div>
 
@@ -294,9 +312,10 @@ TOTAL: 114
 <div class="blockquote">
 	Yes - 8 (7%)<br />
 	Somewhat - 32 (28%)<br />
-	No - 73 (64%)<br />
-	(Don't know) - 1 (1%)<br />
-	RF - 2 (1%)<br />
+	No - 73 (63%)<br />
+	---<br />
+	DK - 1 (1%)<br />
+	RF - 2 (2%)<br />
 	TOTAL: 116
 </div>
 
@@ -308,6 +327,7 @@ TOTAL: 114
 	Fair - 31 (27%)<br />
 	(Fair, poor) - 1 (1%)<br />
 	Poor - 71 (61%)<br />
+	---<br />
 	TOTAL: 116
 	<br />
 	<br />
@@ -316,6 +336,7 @@ TOTAL: 114
 	Good - 11 (9%)<br />
 	Fair - 19 (16%)<br />
 	Poor - 80 (68%)<br />
+	---<br />
 	TOTAL: 117
 	<br />
 	<br />
@@ -324,14 +345,16 @@ TOTAL: 114
 	Good - 12 (10%)<br />
 	Fair - 42 (35%)<br />
 	Poor - 64 (54%)<br />
+	---<br />
 	TOTAL: 119
 	<br />
 	<br />
 	D. The Poor<br />
 	Excellent - 3 (3%)<br />
 	Good - 3 (3%)<br />
-	Fair - 8 (6%)<br />
+	Fair - 8 (7%)<br />
 	Poor - 104 (88%)<br />
+	---<br />
 	TOTAL: 118
 	<br />
 	<br />
@@ -340,6 +363,7 @@ TOTAL: 114
 	Good - 11 (9%)<br />
 	Fair - 3 (3%)<br />
 	Poor - 15 (13%)<br />
+	---<br />
 	TOTAL: 118
 	<br />
 	<br />
@@ -348,6 +372,7 @@ TOTAL: 114
 	Good - 10 (8%)<br />
 	Fair - 38 (32%)<br />
 	Poor - 69 (58%)<br />
+	---<br />
 	TOTAL: 119
 	<br />
 	<br />
@@ -357,6 +382,7 @@ TOTAL: 114
 	Fair - 32 (27%)<br />
 	(Fair, poor) - 2 (2%)<br />
 	Poor - 70 (59%)<br />
+	---<br />
 	TOTAL: 118
 	<br />
 	<br />
@@ -365,6 +391,7 @@ TOTAL: 114
 	Good - 0 (0%)<br />
 	Fair - 12 (10%)<br />
 	Poor - 104 (88%)<br />
+	---<br />
 	TOTAL: 118
 	<br />
 	<br />
@@ -373,6 +400,7 @@ TOTAL: 114
 	Good - 2 (2%)<br />
 	Fair - 12 (10%)<br />
 	Poor - 103 (87%)<br />
+	---<br />
 	TOTAL: 118
 	<br />
 	<br />
@@ -381,6 +409,7 @@ TOTAL: 114
 	Good - 8 (7%)<br />
 	Fair - 4 (3%)<br />
 	Poor - 13 (11%)<br />
+	---<br />
 	TOTAL: 118
 	<br />
 	<br />
@@ -391,6 +420,7 @@ TOTAL: 114
 	Fair - 35 (30%)<br />
 	(Fair, poor) - 1 (1%)<br />
 	Poor - 52 (44%)<br />
+	---<br />
 	TOTAL: 118
 	<br />
 	<br />
@@ -399,6 +429,7 @@ TOTAL: 114
 	Good - 14 (12%)<br />
 	Fair - 5 (4%)<br />
 	Poor - 12 (10%)<br />
+	---<br />
 	TOTAL: 116
 </div>
 
@@ -408,7 +439,8 @@ TOTAL: 114
 	Excellent - 2 (2%)<br />
 	Good - 12 (10%)<br />
 	Fair - 30 (26%)<br />
-	Poor - 73 (62%)<br />
+	Poor - 73 (63%)<br />
+	---<br />
 	Total: 117
 	<br />
 	<br />
@@ -417,6 +449,7 @@ TOTAL: 114
 	Good - 9 (8%)<br />
 	Fair - 41 (35%)<br />
 	Poor - 63 (54%)<br />
+	---<br />
 	TOTAL: 116
 	<br />
 	<br />
@@ -425,6 +458,7 @@ TOTAL: 114
 	Good - 34 (29%)<br />
 	Fair - 41 (35%)<br />
 	Poor - 40 (34%)<br />
+	---<br />
 	TOTAL: 117
 	<br />
 	<br />
@@ -432,7 +466,8 @@ TOTAL: 114
 	Excellent - 1 (1%)<br />
 	Good - 2 (2%)<br />
 	Fair - 29 (25%)<br />
-	Poor - 84 (72%)<br />
+	Poor - 84 (73%)<br />
+	---<br />
 	TOTAL: 116
 	<br />
 	<br />
@@ -441,6 +476,7 @@ TOTAL: 114
 	Good - 34 (29%)<br />
 	Fair - 44 (38%)<br />
 	Poor - 32 (28)<br />
+	---<br />
 	TOTAL: 116
 	<br />
 	<br />
@@ -449,6 +485,7 @@ TOTAL: 114
 	Good - 22 (19%)<br />
 	Fair - 40 (34%)<br />
 	Poor - 51 (44%)<br />
+	---<br />
 	TOTAL: 116
 	<br />
 	<br />
@@ -457,6 +494,7 @@ TOTAL: 114
 	Good - 5 (4%)<br />
 	Fair - 23 (20%)<br />
 	Poor - 89 (76%)<br />
+	---<br />
 	TOTAL: 117
 </div>
 
@@ -469,14 +507,41 @@ TOTAL: 114
 30. Who would you say is most to blame for our failure to address our problems? [Please write answer in box]
 <div class="blockquote">Many responses focused on self incrimination and a general sense of culpability driven by apathy.  This was followed by a number of comments that focus on the current elite who hold power and the current structure of government with some related comments focused more on monied interests such as corporations, banks, and general greed.</div>
 
+
+<h2 id="demo">Demographics</h2>
+
+31. What is your gender?
+<div class="blockquote">
+	Female - 34 (28%)<br />
+	Male - 83 (69%)<br />
+	Other - 2 (1%)<br />
+	---<br />
+	RF - 2 (1%)<br />
+	TOTAL: 121
+</div>
+
+32. What is your age group?
+<div class="blockquote">
+	15-19 - 7 (6%)<br />
+	20-24 - 22 (18%)<br />
+	25-34 - 35 (29%)<br />
+	35-44 - 11 (9%)<br />
+	45-54 - 21 (18%)<br />
+	55-64 - 12 (10%)<br />
+	65-74 - 9 (8%)<br />
+	---<br />
+	RF - 2 (2%)<br />
+	TOTAL: 119
+</div>
+
 33. With which political party do you identify?
 <div class="blockquote">
 	Constitution Party - 2<br />
 	Democratic Party - 22<br />
 	Democratic Party, Independent Party of Oregon - 1<br />
 	Democratic Party, Libertarian Party - 1<br />
-	Democratic Party, Other (they all liars) - 1<br />
 	Democratic Party, Pacific Green Party - 2<br />
+	Democratic Party, Other (they all liars) - 1<br />
 	Independent Party of Oregon - 7<br />
 	Libertarian Party - 2<br />
 	Pacific Green Party - 8<br />
@@ -484,64 +549,9 @@ TOTAL: 114
 	Republican Party - 6<br />
 	Working Families Party of Oregon - 7<br />
 	Other - 48<br />
+	---<br />
 	RF - 2<br />
 	TOTAL: 116
-</div>
-
-31. What is your gender?
-<div class="blockquote">
-	Female - 34 (28%)<br />
-	Male - 83 (69%)<br />
-	Other - 2 (1%)<br />
-	RF - 2 (1%)<br />
-	TOTAL: 121
-</div>
-
-32. What is your age group?
-<div class="blockquote">
-	15 to 19 - 7 (6%)<br />
-	20 to 24 - 22 (18%)<br />
-	25 to 34 - 35 (29%)<br />
-	35 to 44 - 11 (9%)<br />
-	45 to 54 - 21 (18%)<br />
-	55 to 64 - 12 (10%)<br />
-	65 to 74 - 9 (8%)<br />
-	RF - 2 (2%)<br />
-	TOTAL: 119
-</div>
-
-38. Are you employed?
-<div class="blockquote">
-	disabled - 3<br />
-	full-time - 30<br />
-	full-time student - 8<br />
-	full-time, full-time student - 2<br />
-	full-time, part-time - 2<br />
-	homemaker - 2<br />
-	part-time - 7<br />
-	part-time, but would like to be full-time - 11<br />
-	part-time, homemaker - 1<br />
-	retired - 11<br />
-	retired, disabled - 2<br />
-	unemployed - 30<br />
-	unemployed, disabled - 1<br />
-	unemployed, full-time student	2<br />
-	RF - 1<br />
-	TOTAL: 118
-</div>
-
-39. Which of the following best describes your household’s total annual income for 2011?
-<div class="blockquote">
-	Less than $10,000 - 39 (34%)<br />
-	$10,000 - $14,999 - 15 (13%)<br />
-	$15,000 - $24,999 - 19 (17%)<br />
-	$25,000 - $34,999 - 12 (11%)<br />
-	$35,000 - $49,999 - 6 (5%)<br />
-	$50,000 - $74,999 - 12 (11%)<br />
-	$75,000 - $99,999 - 5 (4%)<br />
-	$100,000 or more - 5 (4%)<br />
-	RF - 1 (1%)<br />
-	TOTAL: 114
 </div>
 
 34. What best describes your race or ethnicity?
@@ -567,6 +577,7 @@ TOTAL: 114
 	Other: Irish & Native American - 1<br />
 	Other: Irish American - 1<br />
 	Other: World Citizen - 1<br />
+	---<br />
 	RF - 1<br />
 	TOTAL: 116
 </div>
@@ -576,6 +587,7 @@ TOTAL: 114
 	Yes - 50 (42%)<br />
 	No - 65 (54%)<br />
 	(Kind of) - 1 (1%)<br />
+	---<br />
 	RF - 4 (3%)<br />
 	TOTAL: 120
 </div>
@@ -585,7 +597,8 @@ TOTAL: 114
 	Yes - 46 (39%)<br />
 	No - 69 (58%)<br />
 	(Pregnant) - 1 (1%)<br />
-	RF - 2 (1%)<br />
+	---<br />
+	RF - 2 (2%)<br />
 	TOTAL: 119
 </div>
 
@@ -597,9 +610,47 @@ TOTAL: 114
 	College graduate (4 year degree) - 28 (24%)<br />
 	Some graduate school - 12 (10%)<br />
 	Graduate/Professional degree - 15 (13%)<br />
+	---<br />
 	RF - 1<br />
 	TOTAL: 119
 </div>
-<br />
+
+38. Are you employed?
+<div class="blockquote">
+	disabled - 3<br />
+	full-time - 30<br />
+	full-time student - 8<br />
+	full-time, full-time student - 2<br />
+	full-time, part-time - 2<br />
+	homemaker - 2<br />
+	part-time - 7<br />
+	part-time, but would like to be full-time - 11<br />
+	part-time, homemaker - 1<br />
+	retired - 11<br />
+	retired, disabled - 2<br />
+	unemployed - 30<br />
+	unemployed, disabled - 1<br />
+	unemployed, full-time student	2<br />
+	---<br />
+	RF - 1<br />
+	TOTAL: 118
+</div>
+
+39. Which of the following best describes your household’s total annual income for 2011?
+<div class="blockquote">
+	Less than $10,000 - 39 (34%)<br />
+	$10,000 - $14,999 - 15 (13%)<br />
+	$15,000 - $24,999 - 19 (17%)<br />
+	$25,000 - $34,999 - 12 (11%)<br />
+	$35,000 - $49,999 - 6 (5%)<br />
+	$50,000 - $74,999 - 12 (11%)<br />
+	$75,000 - $99,999 - 5 (4%)<br />
+	$100,000 or more - 5 (4%)<br />
+	---<br />
+	RF - 1 (1%)<br />
+	TOTAL: 114
+</div>
+
+<hr />
 
 <p id="note1"><a href="#intro">NOTE:</a> Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong</p>
