format tweaks for occupy and updated included report PDF

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -16,7 +16,8 @@ description: collected raw data and survey analysis for political and demographi
 
 <p>Our initial survey was modeled after <a href="http://online.wsj.com/article/SB10001424052970204479504576637082965745362.html">a similar poll</a> conducted by Douglas E. Schoen of ~200 people at the Occupy Wallsteet encampment in Zuccotti Park, October 10th & 11th of 2011. <a href="/storage/OccupyPDXdata/SchoenOccupyWallStreetPoll.pdf" target="_blank">A summary of that report can be found here.</a>
 
-<p>Raw Data available in <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyDataRaw.xls" target="_blank">[XLS]</a> and <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyData.ods" target="_blank">[ODS]</a> formats.</p>
+<p>Raw Data available in <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyDataRaw.xls" target="_blank">[XLS]</a> and <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyData.ods" target="_blank">[ODS]</a> formats.<br />
+<a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf">[Download PDF of summary]</a></p>
 
 <h2>Occupy Portland Report (DRAFT)</h2>
 
@@ -25,10 +26,8 @@ description: collected raw data and survey analysis for political and demographi
 <li><a href="#demo">Demographics</a></li>
 </ul>
 
-<a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf"> Download PDF of summary</a>
-<p class="blockquote">NOTE: Percentages rounded so may not always equal 100%. Refusals (RF) include marked Refsual or not directly answering question in most cases. Don't Know (DK) and additional written comments noted in paranthesis.</p>
-
 <h2 id="main">Survey</h2>
+<p class="blockquote"><a href="#note2">Methodology²</a></p>
 
 1. Do you consider yourself a part of the Occupy Portland Movement?
 <div class="blockquote">
@@ -653,4 +652,5 @@ TOTAL: 114
 
 <hr />
 
-<p id="note1"><a href="#intro">NOTE:</a> Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong</p>
+<p id="note1"><a href="#intro">Note 1:</a> Other participants included <a href="http://mulderc.blogspot.com" target="_blank">Cameron Mulder</a>, Stephen Shackman, Josie Griffin, Melissa Balgley, Philip Cleary, Erica Horton, and Fred Duong</p>
+<p id="note2"><a href="#main">Note 2:</a> Percentages rounded so may not always equal 100%. Refusals (RF) include marked refusal or not directly answering question in most cases. Don't Know (DK) and additional written comments included in paranthesis.</p>
