occupy page, fixed spelling

--- a/occupypdx.html
+++ b/occupypdx.html
@@ -14,7 +14,7 @@ description: collected raw data and survey analysis for political and demographi
 
 <div class="blockquote"><img src="/storage/OccupyPDXdata/occupy_portland_dawn.jpg" width="75%" alt="Occupy Portland courtesy Getty Images"/></div>
 
-<p>Our initial survey was modeled after <a href="http://online.wsj.com/article/SB10001424052970204479504576637082965745362.html">a similar poll</a> conducted by Douglas E. Schoen of ~200 people at the Occupy Wallsteet encampment in Zuccotti Park, October 10th & 11th of 2011. <a href="/storage/OccupyPDXdata/SchoenOccupyWallStreetPoll.pdf" target="_blank">A summary of that report can be found here.</a>
+<p>Our initial survey was modeled after <a href="http://online.wsj.com/article/SB10001424052970204479504576637082965745362.html">a similar poll</a> conducted by Douglas E. Schoen of ~200 people at the Occupy Wallstreet encampment in Zuccotti Park, October 10th & 11th, 2011. <a href="/storage/OccupyPDXdata/SchoenOccupyWallStreetPoll.pdf" target="_blank">A summary of that report can be found here.</a>
 
 <p>Raw Data available in <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyDataRaw.xls" target="_blank">[XLS]</a> and <a href="/storage/OccupyPDXdata/OccupyPortlandSurveyData.ods" target="_blank">[ODS]</a> formats.<br />
 <a href="/storage/OccupyPDXdata/OccupyPDXreportdraft.pdf">[Download PDF of summary]</a></p>
