--- a/me.html
+++ b/me.html
@@ -20,27 +20,32 @@ title: about me
 <table class="linktable">
   <tbody>
     <tr>
-      <td>:: where ::<br />
-        <a href="http://about.me/lucascharles" target="_blank">about.me</a><br />
-        <a href="http://twitter.com/theoretick" target="_blank">twitter</a><br />
-        <a href="http://wikipedia.org/wiki/User:Theoretick" target="_blank">wikipedia</a><br />
-        <br /></td>
-      <td>:: projects ::<br />
-        <a href="/projects.html" target="_blank">project page</a><br />
-        <a href="http://github.com/theoretick" target="_blank">github</a><br />
-        <br />
-        <br /></td>
-      <td>:: stuff ::<br />
-        <a href="/listofpossessions.html" target="_blank">list of possessions</a><br />
-        <a href="http://www.goodreads.com/review/list/5914093-lucas" target="_blank">bookshelf</a><br />
-        <a href="https://www.evernote.com/pub/limitlesschannels/readingnotes" target="_blank">public reading notes</a><br />
-        <a href="/ankidecks.html" target="_blank">anki decks</a><br />
-        </td>
-      <td>:: work ::<br />
-        <a href="/storage/Resume-26feb2013.pdf">resume</a><br />
-        <br />
-        <br />
-        <br /></td>
+       <th scope="col">:: where ::</th>
+       <th scope="col">:: projects ::</th>
+       <th scope="col">:: stuff ::</th>
+       <th scope="col">:: work ::</th>
+    </tr>
+       <td><a href="http://about.me/lucascharles" target="_blank">about.me</a></td>
+       <td><a href="/projects.html" target="_blank">project page</a></td>
+       <td><a href="/listofpossessions.html" target="_blank">list of possessions</a></td>
+       <td><a href="/storage/Resume-26feb2013.pdf">resume</a></td>
+    </tr>
+    <tr>
+       <td><a href="http://twitter.com/theoretick" target="_blank">twitter</a></td>
+       <td><a href="http://github.com/theoretick" target="_blank">github</a></td>
+       <td><a href="http://www.goodreads.com/review/list/5914093-lucas" target="_blank">bookshelf</a></td>
+    </tr>
+    <tr>
+       <td><a href="http://wikipedia.org/wiki/User:Theoretick" target="_blank">wikipedia</a></td>
+       <td></td>
+       <td><a href="https://www.evernote.com/pub/limitlesschannels/readingnotes" target="_blank">public reading notes</a></td>
+       <td></td>
+    </tr>
+    <tr>
+       <td></td>
+       <td></td>
+       <td><a href="/ankidecks.html" target="_blank">anki decks</a><br />
+       <td></td>
     </tr>
   </tbody>
 </table>
