--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@ layout: default
 title: projects
 ---
 
-<p><em>A list of my current (ongoing) projects. Most current code stuff over on Github, <a href="/me.html">see "me" page</a> instead.</em></p>
+<p><em>A list of my current (ongoing) projects. Most current code stuff over on Github, <a href="/me.html">see "about me" page</a> instead.</em></p>
 
 <ul>
 <li>Sleep data recording - a comparison between Zeo and Motion-tracker SleepAsAndroid</li>
