fixed occupy spacing, added new divs and anchors plus all the complementary css

--- a/me.html
+++ b/me.html
@@ -3,7 +3,7 @@ layout: default
 title: about me
 ---
 
-<p class="blockquote">"First off. it doesn't reflect my daily life. Most of what happens hour by hour is quiet and dull. We sit most of the time, watching the dull sky slipping. Frankly, that is too stupid to write about ... what is down, then, is a chronicle of incidents with a potential for wholeness they did not have when they occurred"<br />~ Dhalgren, p.734</p>
+<p><blockquote title="Dhalgren, p.734">"First off. it doesn't reflect my daily life. Most of what happens hour by hour is quiet and dull. We sit most of the time, watching the dull sky slipping. Frankly, that is too stupid to write about ... what is down, then, is a chronicle of incidents with a potential for wholeness they did not have when they occurred"</blockquote></p>
 
 <p>I do stuff and things.</p>
 
@@ -17,14 +17,17 @@ title: about me
 
 <br />
 
-<table class="linktable">
-  <tbody>
+<table class="me-table">
+  <thead>
     <tr>
        <th scope="col">:: where ::</th>
        <th scope="col">:: projects ::</th>
        <th scope="col">:: stuff ::</th>
        <th scope="col">:: work ::</th>
     </tr>
+  </thead>
+  <tbody>
+    <tr>
        <td><a href="http://about.me/lucascharles" target="_blank">about.me</a></td>
        <td><a href="/projects.html" target="_blank">project page</a></td>
        <td><a href="/listofpossessions.html" target="_blank">list of possessions</a></td>
