--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@ title: projects
 <p><em>A list of my current (ongoing) projects. Most current code stuff over on Github, <a href="/me.html">see "about me" page</a> instead.</em></p>
 
 <ul>
-<li>Sleep data recording - a comparison between Zeo and Motion-tracker SleepAsAndroid</li>
+<li>Sleep data recording - a comparison between Zeo portable EEG and Motion-tracker SleepAsAndroid</li>
 <li>Project Digital (<a href="http://quantifiedself.com">Quantified Self</a>)</li>
 <li>Notetaking Migration</li>
 </ul>
