added goodreads widget to about page

--- a/me.html
+++ b/me.html
@@ -19,6 +19,82 @@ title: about me
   src="http://www.portlandcodeschool.com/images/orange_rose_transparent.png"></a>
 
 <br />
+
+<!-- BEGIN OF GOODREADS WIDGET -->
+
+<!-- Show static HTML/CSS as a placeholder in case js is not enabled - javascript include will override this if things work -->
+<style type="text/css" media="screen">
+  #gr_custom_widget_1372185880 {
+    float: right;
+  }
+  .gr_custom_header_1372185880 {
+    /* customize your Goodreads header here*/
+    border-bottom: 1px solid gray;
+    width: 100%;
+    margin-bottom: 5px;
+    text-align: center;
+    font-size: 120%
+  }
+  .gr_custom_each_container_1372185880 {
+    /* customize each individual book container here */
+    width: 100%;
+    clear: both;
+    margin-bottom: 10px;
+    overflow: auto;
+    padding-bottom: 4px;
+    border-bottom: 1px solid #aaa;
+  }
+  .gr_custom_book_container_1372185880 {
+    /* customize your book covers here */
+    overflow: hidden;
+    height: 60px;
+    float: left;
+    margin-right: 4px;
+    width: 39px;
+  }
+  .gr_custom_author_1372185880 {
+    /* customize your author names here */
+  }
+</style>
+
+<div id="gr_custom_widget_1372185880">
+  <div class="gr_custom_container_1372185880">
+    <h2 class="gr_custom_header_1372185880">
+      <a href="http://www.goodreads.com/review/list/5914093-lucas?shelf=currently-reading&utm_medium=api&utm_source=custom_widget" style="text-decoration: none;">currently-reading</a>
+    </h2>
+    <div class="gr_custom_each_container_1372185880">
+      <div class="gr_custom_book_container_1372185880">
+        <a href="http://www.goodreads.com/review/show/647154533?utm_medium=api&utm_source=custom_widget" title="Eloquent Ruby"><img alt="Eloquent Ruby" border="0" src="http://d.gr-assets.com/books/1348111715s/9364729.jpg" /></a>
+      </div>
+      <div class="gr_custom_title_1372185880">
+        <a href="http://www.goodreads.com/review/show/647154533?utm_medium=api&utm_source=custom_widget">Eloquent Ruby</a>
+      </div>
+      <div class="gr_custom_author_1372185880">
+        by <a href="http://www.goodreads.com/author/show/303158.Russ_Olsen">Russ Olsen</a>
+      </div>
+    </div>
+    <div class="gr_custom_each_container_1372185880">
+          <div class="gr_custom_book_container_1372185880">
+            <a href="http://www.goodreads.com/review/show/647144241?utm_medium=api&utm_source=custom_widget" title="Ruby on Rails Tutorial: Learn Web Development with Rails"><img alt="Ruby on Rails Tutorial: Learn Web Development with Rails" border="0" src="http://d.gr-assets.com/books/1355074500s/13705557.jpg" /></a>
+          </div>
+          <div class="gr_custom_title_1372185880">
+            <a href="http://www.goodreads.com/review/show/647144241?utm_medium=api&utm_source=custom_widget">Ruby on Rails Tutorial: Learn Web Development with Rails</a>
+          </div>
+          <div class="gr_custom_author_1372185880">
+            by <a href="http://www.goodreads.com/author/show/245372.Michael_Hartl">Michael Hartl</a>
+          </div>
+      </div>
+    <br style="clear: both"/>
+    <noscript>
+
+    </noscript>
+    </div>
+  </div>
+  <script src="http://www.goodreads.com/review/custom_widget/5914093.currently-reading?cover_position=left&cover_size=small&num_books=2&order=d&shelf=currently-reading&show_author=1&show_cover=1&show_rating=0&show_review=0&show_tags=0&show_title=1&sort=date_updated&widget_bg_color=FFFFFF&widget_bg_transparent=true&widget_border_width=1&widget_id=1372185880&widget_text_color=000000&widget_title_size=medium&widget_width=thin" type="text/javascript" charset="utf-8"></script>
+
+ <!-- END OF GOODREADS WIDGET -->
+
+
 <br />
 
 <table class="me-table">
@@ -34,7 +110,7 @@ title: about me
     <tr>
        <td><a href="http://about.me/lucascharles" target="_blank">about.me</a></td>
        <td><a href="/projects.html" target="_blank">project page</a></td>
-       <td><a href="/listofpossessions.html" target="_blank">list of possessions</a></td>
+       <td><a href="https://www.evernote.com/pub/limitlesschannels/readingnotes" target="_blank">public reading notes</a></td>
        <td><a href="http://www.linkedin.com/pub/lucas-charles/44/659/b23">linkedin</a></td>
     </tr>
     <tr>
@@ -46,14 +122,15 @@ title: about me
     <tr>
        <td><a href="http://wikipedia.org/wiki/User:Theoretick" target="_blank">wikipedia</a></td>
        <td></td>
-       <td><a href="https://www.evernote.com/pub/limitlesschannels/readingnotes" target="_blank">public reading notes</a></td>
+       <td><a href="/ankidecks.html" target="_blank">anki decks</a>
        <td></td>
     </tr>
     <tr>
        <td></td>
        <td></td>
-       <td><a href="/ankidecks.html" target="_blank">anki decks</a><br />
+       <td><a href="/listofpossessions.html" target="_blank">list of possessions</a></td><br />
        <td></td>
     </tr>
   </tbody>
 </table>
+
