--- a/me.html
+++ b/me.html
@@ -124,7 +124,7 @@ title: about me
        <td><a href="http://twitter.com/theoretick" target="_blank">twitter</a></td>
        <td><a href="http://github.com/theoretick" target="_blank">github</a></td>
        <td><a href="http://www.goodreads.com/review/list/5914093-lucas" target="_blank">bookshelf</a></td>
-       <td></td>
+       <td><a href="/storage/LucasCharles-Resume-20july2013.pdf" target="_blank">resume</a></td>
     </tr>
     <tr>
        <td><a href="http://wikipedia.org/wiki/User:Theoretick" target="_blank">wikipedia</a></td>
@@ -135,7 +135,7 @@ title: about me
     <tr>
        <td></td>
        <td></td>
-       <td><a href="/listofpossessions.html" target="_blank">list of possessions</a></td><br />
+       <td><a href="/listofpossessions.html" target="_blank">list of possessions</a></td>
        <td></td>
     </tr>
   </tbody>
