updated resume link, cleaned css, added notification bar for lucascharles.me, added draft, rearranged projects

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<div class="notify-block">
+  For my code work check out <strong><a href="http://lucascharles.me">lucascharles.me</a></strong>
+</div>
+
 <ul id="landinglist">
 {% for post in site.posts limit: 6 %}
   <div>
